--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "synclint": "gulp synclint --path sl-fe-lint"
+    "synclint": "gulp synclint --path sl-fe-lint --module"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,8 @@
     "sl-fe-lint": "^1.1.2"
   },
   "dependencies": {
-    "gulp-util": "^3.0.7"
+    "gulp-delete-lines": "0.0.7",
+    "gulp-util": "^3.0.7",
+    "run-sequence": "^1.1.5"
   }
 }
