--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "gulp-delete-lines": "0.0.7",
-    "gulp-util": "^3.0.7",
-    "run-sequence": "^1.1.5"
+    "gulp-if": "^2.0.0",
+    "gulp-util": "^3.0.7"
   }
 }
